# PAL

./: .gitignore  README.md
cpp_tutorials/: CMakeLists.txt  array_pointers.cpp  lambda.cpp  tree.cpp  vector.cpp
random_stuff/: CMakeLists.txt  array_pointers.cpp  array_vector.cpp  vector.cpp
task01/: CMakeLists.txt  Config.h.in  data_utils.hpp  node.hpp  print_utils.hpp  task01  task01.cpp  task01.hpp  test.cpp  unused.hpp
task01/datapub/: pub01_sorted.in
task02/: CMakeLists.txt  data_utils.hpp  node.hpp  print_utils.hpp  task02.cpp  task02.hpp  unused.hpp
task03/: CMakeLists.txt  data_utils.hpp  node.hpp  print_utils.hpp  task03.cpp  task03.hpp
task04/: CMakeLists.txt  big_int.hpp  print_utils.hpp  task02.cpp  task04.cpp  task04.hpp
task05/: CMakeLists.txt  data_utils.hpp  print_utils.hpp  task05.cpp  task05.hpp  unused.hpp
task06/: CMakeLists.txt  data_utils.hpp  print_utils.hpp  task06.cpp  task06.hpp  unused.hpp
task06/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
